[project]
name = "agg-ai-proxy-docs"
version = "0.1.0"
description = "Documentation for AGG AI Proxy API"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

